@@ -3,9 +3,13 @@ package ru.yandex.practicum.filmorate.service;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import ru.yandex.practicum.filmorate.dto.LikeDto;
 import ru.yandex.practicum.filmorate.dto.film.FilmDto;
 import ru.yandex.practicum.filmorate.dto.film.FilmUpdateInformation;
 import ru.yandex.practicum.filmorate.dto.film.NewFilmRequest;
+import ru.yandex.practicum.filmorate.dto.genre.GenreAndFilmDto;
+import ru.yandex.practicum.filmorate.dto.genre.GenreDto;
+import ru.yandex.practicum.filmorate.dto.mpa.MpaDto;
 import ru.yandex.practicum.filmorate.dto.user.UserDto;
 import ru.yandex.practicum.filmorate.exceptions.ConditionsNotMetException;
 import ru.yandex.practicum.filmorate.exceptions.InternalServerException;
@@ -13,15 +17,16 @@ import ru.yandex.practicum.filmorate.exceptions.NotFoundId.NotFoundIdException;
 import ru.yandex.practicum.filmorate.exceptions.NotFoundId.WhichObjectNotFound;
 import ru.yandex.practicum.filmorate.exceptions.ValidationException;
 import ru.yandex.practicum.filmorate.mappers.FilmMapper;
-import ru.yandex.practicum.filmorate.model.Like;
 import ru.yandex.practicum.filmorate.model.films.Film;
-import ru.yandex.practicum.filmorate.model.films.Genre;
-import ru.yandex.practicum.filmorate.model.films.Mpa;
+import ru.yandex.practicum.filmorate.model.films.GenreAndFilm;
 import ru.yandex.practicum.filmorate.storage.FilmStorage;
 
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -34,21 +39,33 @@ public class FilmService {
     private final LikeService likeService;
 
     public List<FilmDto> getAllFilms() {
-        return filmStorage.getAllFilms().stream().map(film -> {
-            List<Genre> genres = genreService.getGenreOfFilmById(film.getId());
-            Mpa mpa = mpaService.getMpaById(film.getIdMpa());
-            return FilmMapper.mapToFilmDto(film, mpa, genres);
-        }).toList();
+        Map<Long, MpaDto> mpaIdAndMpaDto = mpaService.getAllMpa().stream()
+                .collect(Collectors.toMap(MpaDto::getId, mpaDto -> mpaDto));
+
+        Map<Long, GenreDto> genreIdAndGenreDto = genreService.getAllGenres().stream()
+                .collect(Collectors.toMap(GenreDto::getId, genreDto -> genreDto));
+
+        Map<Long, List<GenreDto>> filmsIdAndGenresDto = genreService.getAllGenresAndFilms().stream()
+                .collect(Collectors.groupingBy(GenreAndFilmDto::getIdFilm, Collectors.mapping(
+                        genreAndFilmDto -> genreIdAndGenreDto.get(genreAndFilmDto.getIdGenre()),
+                        Collectors.toList())));
+
+        return filmStorage.getAllFilms().stream()
+                .map(film -> {
+            List<GenreDto> genresDto = filmsIdAndGenresDto.getOrDefault(film.getId(), new ArrayList<>());
+            MpaDto mpaDto = mpaIdAndMpaDto.get(film.getIdMpa());
+            return FilmMapper.mapToFilmDto(film, mpaDto, genresDto);})
+                .toList();
     }
 
     public FilmDto getFilmById(long id) {
         Film film = filmStorage.getFilmById(id).orElseThrow(() -> new NotFoundIdException(id, WhichObjectNotFound.FILM));
 
-        Mpa mpa = mpaService.getMpaById(film.getIdMpa());
+        MpaDto mpaDto = mpaService.getMpaById(film.getIdMpa());
 
-        List<Genre> genres = genreService.getGenreOfFilmById(film.getId());
+        List<GenreDto> genresDto = genreService.getGenreOfFilmById(film.getId());
 
-        return FilmMapper.mapToFilmDto(film, mpa, genres);
+        return FilmMapper.mapToFilmDto(film, mpaDto, genresDto);
     }
 
     public FilmDto addFilm(NewFilmRequest newFilmRequest) {
@@ -57,12 +74,11 @@ public class FilmService {
             throw new ValidationException("Дата релиза фильма должна быть позже 28.12.1895");
         }
 
-        Mpa mpa = mpaService.getMpaById(newFilmRequest.getMpa().getId());
+        MpaDto mpa = mpaService.getMpaById(newFilmRequest.getMpa().getId());
 
         Film film = filmStorage.addNewFilm(FilmMapper.createFilm(newFilmRequest)).orElseThrow(() -> new InternalServerException("Не получилось создать фильм"));
 
-
-        List<Genre> genres = genreService.addGenresOfFilm(film.getId(), newFilmRequest.getGenres());
+        List<GenreDto> genres = genreService.addGenresOfFilm(film.getId(), newFilmRequest.getGenres());
 
         return FilmMapper.mapToFilmDto(film, mpa, genres);
     }
@@ -84,31 +100,31 @@ public class FilmService {
         log.debug("Был удален лайк у фильма {} пользователя {}", filmDto.getName(), userDto.getLogin());
     }
 
-    public Like addLike(Long filmId, Long userId) {
+    public LikeDto addLike(Long filmId, Long userId) {
         FilmDto filmDto = getFilmById(filmId);
         UserDto user = userService.getUser(userId);
-        Like like = likeService.addLike(filmId, userId);
+        LikeDto likeDto = likeService.addLike(filmId, userId);
         log.debug("Был добавлен лайк фильму {} пользователем {}", filmDto.getName(), user.getLogin());
-        return like;
+        return likeDto;
     }
 
 
     public FilmDto putFilm(FilmUpdateInformation filmUpdateInformation) {
         if (filmUpdateInformation.hasMpa()) {
-            mpaService.getMpaById(filmUpdateInformation.getMpa().getId());
+            mpaService.getMpaById(filmUpdateInformation.getNewMpaRequest().getId());
         }
 
         Film film = filmStorage.getFilmById(filmUpdateInformation.getId()).orElseThrow(() -> new NotFoundIdException(filmUpdateInformation.getId(), WhichObjectNotFound.FILM));
 
 
-        Mpa mpa = mpaService.getMpaById(film.getIdMpa());
+        MpaDto mpaDto = mpaService.getMpaById(film.getIdMpa());
 
-        List<Genre> genres;
+        List<GenreDto> genresDto;
         if (filmUpdateInformation.hasGenres()) {
             genreService.deleteGenreOfFilm(film.getId());
-            genres = genreService.addGenresOfFilm(film.getId(), filmUpdateInformation.getGenres());
+            genresDto = genreService.addGenresOfFilm(film.getId(), filmUpdateInformation.getNewGenreRequests());
         } else {
-            genres = genreService.getGenreOfFilmById(film.getId());
+            genresDto = genreService.getGenreOfFilmById(film.getId());
         }
 
         FilmMapper.updateFilmInformation(film, filmUpdateInformation);
@@ -116,6 +132,6 @@ public class FilmService {
         filmStorage.updateFilmInformation(film).orElseThrow(() -> new InternalServerException("Не получилось обновить данные фильма"));
 
 
-        return FilmMapper.mapToFilmDto(film, mpa, genres);
+        return FilmMapper.mapToFilmDto(film, mpaDto, genresDto);
     }
 }
